Fixed some more issues with the openapi specs
