# app/project/views/openapi_parts/generic_configuration_action_attachments.py
@@ -225,6 +225,7 @@ components = {
             "content": {
                 "application/vnd.api+json": {
                     "schema": {
+                        "type": "object",
                         "properties": {
                             "jsonapi": {
                                 "type": "object",
@@ -238,35 +239,49 @@ components = {
                             },
                             "data": {
                                 "type": "array",
-                                "properties": {
-                                    "id": {"type": "string"},
-                                    "type": {"type": "string"},
-                                    "attributes": {"type": "object", "properties": {}},
-                                    "relationships": {
-                                        "type": "object",
-                                        "properties": {
-                                            "action": {
-                                                "type": "object",
-                                                "properties": {
-                                                    "data": {
-                                                        "type": "object",
-                                                        "properties": {
-                                                            "id": {"type": "string"},
-                                                            "type": {"type": "string"},
-                                                        },
-                                                    }
+                                "items": {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {"type": "string"},
+                                        "type": {"type": "string"},
+                                        "attributes": {
+                                            "type": "object",
+                                            "properties": {},
+                                        },
+                                        "relationships": {
+                                            "type": "object",
+                                            "properties": {
+                                                "action": {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "data": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "id": {
+                                                                    "type": "string"
+                                                                },
+                                                                "type": {
+                                                                    "type": "string"
+                                                                },
+                                                            },
+                                                        }
+                                                    },
                                                 },
-                                            },
-                                            "attachment": {
-                                                "type": "object",
-                                                "properties": {
-                                                    "data": {
-                                                        "type": "object",
-                                                        "properties": {
-                                                            "id": {"type": "string"},
-                                                            "type": {"type": "string"},
-                                                        },
-                                                    }
+                                                "attachment": {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "data": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "id": {
+                                                                    "type": "string"
+                                                                },
+                                                                "type": {
+                                                                    "type": "string"
+                                                                },
+                                                            },
+                                                        }
+                                                    },
                                                 },
                                             },
                                         },
@@ -305,7 +320,7 @@ components = {
                                     },
                                 ],
                             },
-                        }
+                        },
                     }
                 }
             },
